# csad2526ki406maksymdiadiuk6

./: .gitignore  AI.txt  CMakeLists.txt  README.md  ci.bat  ci.sh  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
lab2/: spi_master_rx.v  spi_master_top.v  spi_master_top_tb.v  Результати осцилограм.docx
tests/: CMakeLists.txt  unit_tests.cpp
